# project_folder

./: README.md  folder.json  main.py  pyproject.toml
src/: Json_saver.py  abstractHh.py  get_vacancies.py  main.py  user_vacancy.py  vacanc.py  vacancies.py  vacancy.py
