[tool.poetry]
name = "poject-folder"
version = "0.1"
description = "\"Помощник в поиске анализе фильтрации и сравнее ваканский с hh.ru\""
authors = ["Yamete Kudasai <ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAIHz9UP48vsX5QHtRbnWSJfttNWrsUcnSHPgtuXt7kPlq your_email@example.com -ssh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
requests = "^2.31.0"
yarl = "^1.9.4"
build =  "^1.0.3"
cleo = "^2.1.0"
colorama = "^0.4.6"
coverage = "^7.4.2"
distlib = "^0.3.8"
fake_user_agent = "^2.1.8"
fastjsonschema = "^2.19.1"
google-api-core = "^2.17.1"
google-api-python-client = "^2.118.0"
google-auth = "^2.28.0"
google-auth-httplib2 = "^0.2.0"
googleapis-common-protos = "^1.62.0"
httplib2 = "^0.22.0"
idna = "^3.6"
iniconfig = "^2.0.0"
installer = "^0.7.0"
isodata = "^0.10.0"
isodate = "^0.6.1"
numpy = "^1.26.4"
packaging = "^23.2"
pandas = "^2.2.0"
poetry = "^1.7.1"
pytest = "^8.0.1"
pytest-cov = "^4.1.0"
uritemplate = "^4.1.1"
urllib3 = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
